crates/graphql-project/tests/snapshots/validation_snapshots__invalid_typescript_snapshot.snap
---
source: crates/graphql-project/tests/validation_snapshots.rs
expression: "all_diagnostics.join(\"\\n\\n\")"
---
=== Document 1 ===
Error: type `User` does not have a field `invalidField`
   ╭─[ crates/graphql-project/tests/fixtures/invalid_typescript.tsx:7:7 ]
   │
 7 │       invalidField
   │       ──────┬─────  
   │             ╰─────── field `invalidField` selected here
   │ 
   │ Note: path to the field: `query GetUser → user → invalidField`
───╯


Error: type `User` does not have a field `anotherBadField`
   ╭─[ crates/graphql-project/tests/fixtures/invalid_typescript.tsx:9:7 ]
   │
 9 │       anotherBadField
   │       ───────┬───────  
   │              ╰───────── field `anotherBadField` selected here
   │ 
   │ Note: path to the field: `query GetUser → user → anotherBadField`
───╯
